--- a/analisis_red_tiendas.ipynb
+++ b/analisis_red_tiendas.ipynb
@@ -24,7 +24,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "id": "6b765d70",
    "metadata": {},
    "outputs": [
@@ -39,16 +39,16 @@
    "source": [
     "# Cargar los datos desde archivos CSV\n",
     "# Nota: Las rutas absolutas según el requerimiento\n",
-    "sales_df = pd.read_csv('/home/genai/projects/analisis-de-datos-numpy-pandas/python_intermedio/sales.csv')\n",
-    "inventories_df = pd.read_csv('/home/genai/projects/analisis-de-datos-numpy-pandas/python_intermedio/inventories.csv')\n",
-    "satisfaction_df = pd.read_csv('/home/genai/projects/analisis-de-datos-numpy-pandas/python_intermedio/satisfaction.csv')\n",
+    "sales_df = pd.read_csv('/workspace/sales.csv')\n",
+    "inventories_df = pd.read_csv('/workspace/inventories.csv')\n",
+    "satisfaction_df = pd.read_csv('/workspace/satisfaction.csv')\n",
     "\n",
     "print(\"Datos cargados exitosamente.\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "id": "7ea12277",
    "metadata": {},
    "outputs": [
@@ -72,7 +72,15 @@
     "print(\"Datos limpiados.\")\n",
     "print(f\"Ventas: {sales_df.shape}\")\n",
     "print(f\"Inventarios: {inventories_df.shape}\")\n",
-    "print(f\"Satisfacción: {satisfaction_df.shape}\")"
+    "print(f\"Satisfacción: {satisfaction_df.shape}\")\n",
+    "\n",
+    "# Mostrar información de los DataFrames\n",
+    "print(\"\\nInformación de Ventas:\")\n",
+    "sales_df.info()\n",
+    "print(\"\\nInformación de Inventarios:\")\n",
+    "inventories_df.info()\n",
+    "print(\"\\nInformación de Satisfacción:\")\n",
+    "satisfaction_df.info()"
    ]
   },
   {
@@ -85,7 +93,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "id": "978463eb",
    "metadata": {},
    "outputs": [
@@ -118,9 +126,9 @@
     "ventas_por_producto = sales_df.groupby('Producto')['Total_Ventas'].sum()\n",
     "\n",
     "print(\"Ventas totales por tienda:\")\n",
-    "print(ventas_por_tienda)\n",
+    "print(ventas_por_tienda.reset_index())\n",
     "print(\"\\nVentas totales por producto:\")\n",
-    "print(ventas_por_producto)"
+    "print(ventas_por_producto.reset_index())"
    ]
   },
   {
@@ -187,7 +195,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "id": "2168e426",
    "metadata": {},
    "outputs": [
@@ -212,7 +220,7 @@
     "merged_df = pd.merge(sales_df, inventories_df, on=['ID_Tienda', 'Producto'], how='left')\n",
     "merged_df['Rotacion_Inventario'] = merged_df['Cantidad_Vendida'] / merged_df['Stock_Disponible']\n",
     "\n",
-    "# Rotación por tienda (promedio o suma?)\n",
+    "# Rotación por tienda (usando la media de rotación por producto en cada tienda)\n",
     "rotacion_por_tienda = merged_df.groupby('ID_Tienda')['Rotacion_Inventario'].mean()\n",
     "print(\"Rotación de inventarios por tienda:\")\n",
     "print(rotacion_por_tienda)"
@@ -310,7 +318,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "id": "bcd4d80b",
    "metadata": {},
    "outputs": [
@@ -329,13 +337,17 @@
     "mediana = np.median(ventas_array)\n",
     "desviacion = np.std(ventas_array)\n",
     "\n",
-    "print(f\"Mediana de ventas: {mediana}\")\n",
-    "print(f\"Desviación estándar de ventas: {desviacion}\")"
+    "print(f\"Mediana de ventas (NumPy): {mediana}\")\n",
+    "print(f\"Desviación estándar de ventas (NumPy): {desviacion}\")\n",
+    "\n",
+    "# Para comparación, usando Pandas\n",
+    "print(f\"Mediana de ventas (Pandas): {sales_df['Total_Ventas'].median()}\")\n",
+    "print(f\"Desviación estándar de ventas (Pandas): {sales_df['Total_Ventas'].std()}\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "id": "1f653c7a",
    "metadata": {},
    "outputs": [
@@ -352,8 +364,13 @@
    ],
    "source": [
     "# Simular proyecciones de ventas futuras\n",
+    "# Usamos una distribución normal con loc=mediana y scale=desviacion para modelar ventas futuras basadas en datos históricos\n",
     "np.random.seed(42)  # Para reproducibilidad\n",
     "proyecciones = np.random.normal(loc=mediana, scale=desviacion, size=100)  # Simular 100 ventas futuras\n",
+    "\n",
+    "# Almacenar en DataFrame para análisis adicional\n",
+    "proyecciones_df = pd.DataFrame({'Proyeccion_Ventas': proyecciones})\n",
+    "\n",
     "print(\"Estadísticas de proyecciones:\")\n",
     "print(f\"Media: {np.mean(proyecciones)}\")\n",
     "print(f\"Mediana: {np.median(proyecciones)}\")\n",
